# HWTess

./: .gitignore  CMakeLists.txt  README.md
shader/: TesseBezierSurface.hlsl
src/: CommonType.h  MobiusStrip.h  ShaderContainer.cpp  TessSurface.cpp  TessSurface.h  main.cpp  quad.h
